// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-on > can bind event handler 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['add'], ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > can bind handlers with arguments 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['add'](5);
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > can bind handlers with empty  object 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['doSomething']({});
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > can bind handlers with empty object (with non empty inner string) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['doSomething']({});
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > can bind handlers with empty object (with non empty inner string) 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, withKey } = helpers;
  const hdlr_fn1 = (ctx)=>ctx['activate'](ctx['action']);
  
  let block1 = createBlock(\`<ul><block-child-0/></ul>\`);
  let block3 = createBlock(\`<li><a block-handler-0="click">link</a></li>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(['someval']);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`action\`] = k_block2[i1];
      ctx[\`action_index\`] = i1;
      const key1 = ctx['action_index'];
      let hdlr1 = [hdlr_fn1, ctx];
      c_block2[i1] = withKey(block3([hdlr1]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on > can bind handlers with object arguments 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['add']({val:5});
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > can bind two event handlers 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['handleClick'], ctx, ev);
  const hdlr_fn2 = (ctx, ev) => callHandler(ctx['handleDblClick'], ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click" block-handler-1="dblclick">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    let hdlr2 = [hdlr_fn2, ctx];
    return block1([hdlr1, hdlr2]);
  }
}"
`;

exports[`t-on > handler is bound to proper owner 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['add'], ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > handler is bound to proper owner, part 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, callHandler, withKey } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['add'], ctx, ev);
  
  let block2 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList([1]);;
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`value\`] = k_block1[i1];
      const key1 = ctx['value'];
      let hdlr1 = [hdlr_fn1, ctx];
      c_block1[i1] = withKey(block2([hdlr1]), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`t-on > handler is bound to proper owner, part 3 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callTemplate } = helpers;
  
  return function template(ctx, node, key = "") {
    return callTemplate(\`sub\`, this, app, ctx, node, key + \`__1\`);
  }
}"
`;

exports[`t-on > handler is bound to proper owner, part 3 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['add'], ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > handler is bound to proper owner, part 4 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, callTemplate, withKey } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList([1]);;
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`value\`] = k_block1[i1];
      ctx[\`value_first\`] = i1 === 0;
      ctx[\`value_last\`] = i1 === k_block1.length - 1;
      ctx[\`value_index\`] = i1;
      ctx[\`value_value\`] = v_block1[i1];
      const key1 = ctx['value'];
      c_block1[i1] = withKey(callTemplate(\`sub\`, this, app, ctx, node, key + \`__1__\${key1}\`), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`t-on > handler is bound to proper owner, part 4 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].add, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > receive event in first argument 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['add'], ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > basic support for native listener 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['divClicked'], ctx, ev);
  const hdlr_fn2 = (ctx, ev) => callHandler(ctx['btnClicked'], ctx, ev);
  
  let block1 = createBlock(\`<div class="myClass" block-handler-0="click"><button block-handler-1="click">Button</button></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    let hdlr2 = [hdlr_fn2, ctx];
    return block1([hdlr1, hdlr2]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > t-on combined with t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['onClick'], ctx, ev);
  
  let block1 = createBlock(\`<div><button block-handler-0="click"><block-child-0/></button></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    const b2 = safeOutput(ctx['html']);
    return block1([hdlr1], [b2]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > t-on with .capture modifier 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['onCapture'], ctx, ev);
  const hdlr_fn2 = (ctx, ev) => callHandler(ctx['doSomething'], ctx, ev);
  
  let block1 = createBlock(\`<div block-handler-0="click.capture"><button block-handler-1="click">Button</button></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = ["capture", hdlr_fn1, ctx];
    let hdlr2 = [hdlr_fn2, ctx];
    return block1([hdlr1, hdlr2]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > t-on with .passive and .capture modifiers 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].onClick, ctx, ev);
  
  let block1 = createBlock(\`<div block-handler-0="click.passive.capture"><button>Button</button></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = ["passive","capture", hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > t-on with .passive modifier 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].onClick, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click.passive">Button</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = ["passive", hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > t-on with empty handler (only modifiers) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div><button block-handler-0="click.prevent">Button</button></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = ["prevent", , ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > t-on with prevent and self modifiers (order matters) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['onClick'], ctx, ev);
  
  let block1 = createBlock(\`<div><button block-handler-0="click.prevent.self"><span>Button</span></button></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = ["prevent","self", hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > t-on with prevent and/or stop modifiers 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['onClickPrevented'], ctx, ev);
  const hdlr_fn2 = (ctx, ev) => callHandler(ctx['onClickStopped'], ctx, ev);
  const hdlr_fn3 = (ctx, ev) => callHandler(ctx['onClickPreventedAndStopped'], ctx, ev);
  
  let block1 = createBlock(\`<div><button block-handler-0="click.prevent">Button 1</button><button block-handler-1="click.stop">Button 2</button><button block-handler-2="click.prevent.stop">Button 3</button></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = ["prevent", hdlr_fn1, ctx];
    let hdlr2 = ["stop", hdlr_fn2, ctx];
    let hdlr3 = ["prevent","stop", hdlr_fn3, ctx];
    return block1([hdlr1, hdlr2, hdlr3]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > t-on with prevent modifier in t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  const hdlr_fn1 = (ctx,_ev)=>ctx['onEdit'](ctx['project'].id,_ev);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<a href="#" block-handler-0="click.prevent"> Edit <block-child-0/></a>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['projects']);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`project\`] = k_block2[i1];
      const key1 = ctx['project'];
      let hdlr1 = ["prevent", hdlr_fn1, ctx];
      const b4 = safeOutput(ctx['project'].name);
      c_block2[i1] = withKey(block3([hdlr1], [b4]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > t-on with self and prevent modifiers (order matters) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['onClick'], ctx, ev);
  
  let block1 = createBlock(\`<div><button block-handler-0="click.self.prevent"><span>Button</span></button></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = ["self","prevent", hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on modifiers (native listener) > t-on with self modifier 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['onClick'], ctx, ev);
  const hdlr_fn2 = (ctx, ev) => callHandler(ctx['onClickSelf'], ctx, ev);
  
  let block1 = createBlock(\`<div><button block-handler-0="click"><span>Button</span></button><button block-handler-1="click.self"><span>Button</span></button></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    let hdlr2 = ["self", hdlr_fn2, ctx];
    return block1([hdlr1, hdlr2]);
  }
}"
`;

exports[`t-on > t-on modifiers (synthetic listener) > basic support for synthetic 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['divClicked'], ctx, ev);
  const hdlr_fn2 = (ctx, ev) => callHandler(ctx['btnClicked'], ctx, ev);
  
  let block1 = createBlock(\`<div block-handler-0="click.synthetic"><button block-handler-1="click.synthetic">Button</button></div>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = ["synthetic", hdlr_fn1, ctx];
    let hdlr2 = ["synthetic", hdlr_fn2, ctx];
    return block1([hdlr1, hdlr2]);
  }
}"
`;

exports[`t-on > t-on with inline statement (function call) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['state'].incrementCounter(2);
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on with inline statement 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['state'].counter++;
  
  let block1 = createBlock(\`<button block-handler-0="click">Click</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on with inline statement, part 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['state'].flag=!ctx['state'].flag;
  
  let block1 = createBlock(\`<button block-handler-0="click">Toggle</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on with inline statement, part 3 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['state'].n=ctx['someFunction'](3);
  
  let block1 = createBlock(\`<button block-handler-0="click">Toggle</button>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on with t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`sub\`, this, app, ctx, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on > t-on with t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['update'], ctx, ev);
  
  let block1 = createBlock(\`<p block-handler-0="click">lucas</p>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`t-on > t-on, with arguments and t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate(\`sub\`, this, app, ctx, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-on > t-on, with arguments and t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const hdlr_fn1 = (ctx)=>ctx['this'].update(ctx['value']);
  
  let block1 = createBlock(\`<p block-handler-0="click">lucas</p>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;
